<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.GameFragment">

  <TextView
    android:id="@+id/player_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/player_score"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/player_display_name"/>

  <TextView
    android:id="@+id/player_score"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/end_turn_button"
    app:layout_constraintBottom_toTopOf="@id/player_name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/player_score"/>


  <TextView
    android:id="@+id/opponent_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/opponent_display_name"/>

  <TextView
    android:id="@+id/opponent_score"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/opponent_name"
    app:layout_constraintBottom_toTopOf="@id/dice_1"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/opponent_score"/>

  <ToggleButton
    android:id="@+id/dice_1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/opponent_name"
    app:layout_constraintEnd_toStartOf="@id/dice_2"
    app:layout_constraintBottom_toTopOf="@id/dice_3"
    app:layout_constraintStart_toStartOf="parent"/>

  <ToggleButton
    android:id="@+id/dice_2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/opponent_name"
    app:layout_constraintStart_toEndOf="@id/dice_1"
    app:layout_constraintBottom_toTopOf="@id/dice_4"
    app:layout_constraintEnd_toEndOf="parent"
    />

  <ToggleButton
    android:id="@+id/dice_3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/dice_1"
    app:layout_constraintEnd_toStartOf="@id/dice_4"
    app:layout_constraintBottom_toTopOf="@id/dice_5"
    app:layout_constraintStart_toStartOf="parent"
    />

  <ToggleButton
    android:id="@+id/dice_4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/dice_2"
    app:layout_constraintStart_toEndOf="@id/dice_3"
    app:layout_constraintBottom_toTopOf="@id/dice_6"
    app:layout_constraintEnd_toEndOf="parent"
    />

  <ToggleButton
    android:id="@+id/dice_5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/dice_3"
    app:layout_constraintEnd_toStartOf="@id/dice_6"
    app:layout_constraintBottom_toTopOf="@id/submit_choice_button"
    app:layout_constraintStart_toStartOf="parent"

    />

  <ToggleButton
    android:id="@+id/dice_6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/dice_4"
    app:layout_constraintStart_toEndOf="@id/dice_5"
    app:layout_constraintBottom_toTopOf="@id/submit_choice_button"
    app:layout_constraintEnd_toEndOf="parent"
    />


  <ToggleButton
    android:id="@+id/end_turn_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/dice_5"
    app:layout_constraintEnd_toStartOf="@id/select_group_button"
    app:layout_constraintBottom_toTopOf="@id/player_name"
    app:layout_constraintStart_toStartOf="parent"
    android:textOff="@string/end_turn_label"
    android:text="@string/end_turn_label"/>

  <Button
    android:id="@+id/select_group_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/dice_6"
    app:layout_constraintStart_toEndOf="@id/end_turn_button"
    app:layout_constraintBottom_toTopOf="@id/player_name"
    android:text="@string/select_group_label"/>

  <Button
    android:id="@+id/submit_choice_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/dice_6"
    app:layout_constraintStart_toEndOf="@id/select_group_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/player_name"
    android:text="@string/submit_choice_label"/>

  <Button
    android:id="@+id/quit_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:text="@string/quit_game_label"/>

</androidx.constraintlayout.widget.ConstraintLayout>